fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -130,6 +130,7 @@ h2 {
 
 .white {
   fill:none;
-  stroke:#000000;
-  stroke-width:11;stroke-miterlimit:10;
+  stroke:#000;
+  stroke-width:11;
+  stroke-miterlimit:10;
 }
